--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aridoza.github.io/portfolio-nov-2019",
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
