--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio-cog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aridoza.github.io/portfolio-nov-2019",
+  "homepage": "https://aridoza.github.io/portfolio-nov-2019/",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
